# pcse-assignments

./: README.md
homework1/: commrank.c
homework2/: CMakeLists.txt  jordan.c
homework3/: CMakeLists.txt  scangather.c
